<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/actionBarStyle"
            android:id="@+id/settings_toolbar"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_margin">

            <TextView
                android:id="@+id/type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_text"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/type_selector"
                style="@style/settingsButtonsStyle"
                android:layout_marginVertical="8dp" />

            <TextView
                android:id="@+id/genre_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre_text"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/genre_selector"
                style="@style/settingsButtonsStyle"
                android:layout_marginVertical="8dp" />

            <TextView
                android:id="@+id/countries_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_text"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/countries_selector"
                style="@style/settingsButtonsStyle"
                android:layout_marginVertical="8dp" />

            <TextView
                android:id="@+id/year_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_text"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/from"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/pickerCardViewStyle"
                    android:layout_weight="1">
                    <NumberPicker
                        android:id="@+id/year_from_picker"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/default_margin"
                    android:text="@string/to"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/pickerCardViewStyle"
                    android:layout_weight="1">
                    <NumberPicker
                        android:id="@+id/year_to_picker"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <TextView
                android:id="@+id/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_text"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/from"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/pickerCardViewStyle"
                    android:layout_weight="1">
                    <NumberPicker
                        android:id="@+id/rating_from_picker"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_weight="1"
                    android:text="@string/to"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/pickerCardViewStyle"
                    android:layout_weight="1">
                    <NumberPicker
                        android:id="@+id/rating_to_picker"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>