<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/title"
            style="@style/actionBarStyle" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        app:itemTextColor="@color/cardViewColor"
        app:itemIconTint="@color/cardViewColor"
        android:background="@color/titleColor"
        app:menu="@menu/menu_bottom_nav" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        android:layout_marginBottom="58dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/wanted_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
            android:textColor="@color/titleColor"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/wanted_list_root"
            android:text="@string/title_wanted_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/wanted_list_root"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/wanted_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/viewed_text_view"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/viewed_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/viewed_list_root"
            app:layout_constraintTop_toBottomOf="@+id/wanted_list_root"
            android:textColor="@color/titleColor"
            android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
            android:text="@string/title_viewed_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/viewed_list_root"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewed_text_view"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_gravity="center"/>




</androidx.coordinatorlayout.widget.CoordinatorLayout>