<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/movie_details_root"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.details.MovieDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            app:title="@string/title"
            style="@style/actionBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_details"
            app:layout_scrollFlags="scroll|enterAlways"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_margin">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="center"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/pickerCardViewStyle"
                android:layout_marginVertical="@dimen/default_margin">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_weight="1" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/pickerCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/trailer_button"
                    style="@style/trailerButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/trailer_button"
                    app:icon="@drawable/ic_baseline_smart_display_24"
                    app:iconGravity="textTop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/rating_card_view"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/rating_card_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    style="@style/pickerCardViewStyle"
                    android:layout_marginStart="8dp"
                    android:layout_marginVertical="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/trailer_button"
                    app:layout_constraintTop_toTopOf="parent">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/rating_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textSize="45sp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="12dp"
                            android:text="@string/rating_kinopoisk"
                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_add_to_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/default_margin"
        android:src="@drawable/ic_baseline_favorite_24"
        android:contentDescription="@string/floatDesc" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>